complete secondary header styles, fix spacing issue on main header

--- a/screen/moqui.org/css/override.css
+++ b/screen/moqui.org/css/override.css
@@ -247,7 +247,6 @@ ul#navigation > li > a {
 }
 ul#navigation a {
   color: #0a2f6c;
-  text-transform: uppercase;
   font-size: 18px;
 }
 ul#navigation  > li > a:hover {
@@ -278,6 +277,31 @@ ul#navigation > li::after {
 }
 
 /* end main nav */
+
+/* Secondary header */
+
+.header-2 .main-nav{
+  top: 0;
+}
+.header-2 .secure-section {
+  position: absolute;
+  right:10px;
+  top: 8px;
+  display: flex;
+}
+.header-2 .secure-section i {
+  font-size: 40px;
+  display: block;
+}
+.header-2 .secure-section span {
+ display: block;
+ color: #98a0b6;
+ text-transform: uppercase;
+ font-size: 16px;
+ padding-left: 5px;
+}
+
+/* End secondary header */
 
 /* END HEADER */
 
@@ -446,13 +470,32 @@ footer form button:hover {
     right: 0;
   }
   ul#navigation > li > a {
-    padding: 22px 30px;
+    padding: 22px 15px;
   }
   .donateBtn {
     height: 61px;
     padding-top: 19px;
   }
   /* end main nav */
+
+  /* Secondary header */
+
+  .header-2 .main-nav  {
+    top: 0;
+    height: 75px;
+  }
+  .header-2 .logo {
+    top: -9px;
+  }
+  .header-2 .logo-img {
+    width: 60px;
+    height: 60px;
+  }
+  .header-2 .secure-section {
+    top: 16px;
+  }
+
+  /* End secondary header */
 
   /* Footer */
 
